--- a/status.html
+++ b/status.html
@@ -304,5 +304,21 @@
       }, 5000);
     }
   </script>
+  <!-- ...کد قبلی بالا... -->
+
+  </div> <!-- پایان container -->
+
+  <!-- بخش متن زیر صفحه -->
+  <footer style="margin-top: 3rem; text-align: center; padding: 1rem;">
+    <a
+      href="https://sites.google.com/view/server-main-%D8%B5%D9%81%D8%AD%D9%87-%D8%A7%D8%B5%D9%84%DB%8C"
+      target="_blank"
+      style="color: red; font-weight: bold; font-size: 1.1rem; text-decoration: none; font-family: 'Vazirmatn', sans-serif;"
+      >سایت 2(server2)</a
+    >
+  </footer>
+
+<!-- ...ادامه کد ... -->
+
 </body>
 </html>
