--- a/status.html
+++ b/status.html
@@ -197,7 +197,7 @@
 
     /* پس‌زمینه کارت‌های سرور */
     .server-item.bg1 {
-      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvnj_wYSNBI2wjdrooFAQVFYNoFNF8N3MgCGc04hwRikoMEtFEZzNkxOE05T97OfHxNl8&usqp=CAU');
+      background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif');
       background-size: cover;
       background-position: center;
       border-color: #4caf50;
@@ -206,7 +206,7 @@
       text-shadow: 0 0 6px black;
     }
     .server-item.bg2 {
-      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-eKGWpUQylq-qpkS9xbCG5m4VGbfF4-Mxfg&s');
+      background-image: url('https://4kwallpapers.com/images/walls/thumbs_3t/5889.jpg');
       background-size: cover;
       background-position: center;
       border-color: #2196f3;
