--- a/status.html
+++ b/status.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background: #000 url('https://i.ibb.co/CbBLq6H/wpaper.jpg') no-repeat center
+      background: #000 url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif') no-repeat center
         center fixed;
       background-size: cover;
       color: white;
@@ -111,6 +111,8 @@
     }
     .quick-match h1 {
       color: lime;
+      ackground: rgba(0, 255, 0, 225);
+      background-color: #0c0;
       text-shadow: 0 0 10px #0f0;
       margin: 0 0 1rem 0;
     }
@@ -197,7 +199,7 @@
 
     /* پس‌زمینه کارت‌های سرور */
     .server-item.bg1 {
-      background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif');
+      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT65k6y6vkbHJ9ZrgkqaXKZlJU5W7UKygQvNw&s');
       background-size: cover;
       background-position: center;
       border-color: #4caf50;
@@ -206,7 +208,7 @@
       text-shadow: 0 0 6px black;
     }
     .server-item.bg2 {
-      background-image: url('https://4kwallpapers.com/images/walls/thumbs_3t/5889.jpg');
+      background-image: url('https://4kwallpapers.com/images/walls/thumbs_2t/11129.png');
       background-size: cover;
       background-position: center;
       border-color: #2196f3;
