--- a/status.html
+++ b/status.html
@@ -110,8 +110,8 @@
       background-color: #0c0;
     }
     .quick-match h1 {
-      color: lime;
-      ackground: rgba(10, 112, 50, 130);
+      color: #00ffff;
+      background: transparent;
       background-color: #0c0;
       text-shadow: 0 0 10px #0f0;
       margin: 0 0 1rem 0;
