--- a/status.html
+++ b/status.html
@@ -315,8 +315,17 @@
     <a
       href="https://sites.google.com/view/server-main-/%D8%B5%D9%81%D8%AD%D9%87-%D8%A7%D8%B5%D9%84%DB%8C"
       target="_blank"
-      style="color: red; font-weight: bold; font-size: 1.1rem; text-decoration: none; font-family: 'Vazirmatn', sans-serif;"
-      > سایت 2بروید(server2) درصورت مشکل به  (کلیک کنید)</a
+   <a href="#"
+  style="color:#ff2a6d; font-weight:bold; font-size:1.3rem; text-decoration:none; font-family:'Vazirmatn',sans-serif;
+         text-shadow:
+           0 0 2px #ff2a6d,
+           0 0 6px #ff2a6d,
+           0 0 12px #ff2a6d,
+           0 0 24px #ff0040,
+           0 0 48px #ff0040;"
+</a>
+
+      > (سایت 2بروید (کلیک کنید-server2- درصورت مشکل به  </a
     >
   </footer>
 
