--- a/status.html
+++ b/status.html
@@ -165,6 +165,13 @@
       user-select: none;
       pointer-events: none;
     }
+        .server-item .icon {
+      width: 40px;
+      margin-top: -25px;
+      filter: drop-shadow(0 0 2px black);
+      user-select: none;
+      pointer-events: none;
+    }
 
     .server-item h3 {
       margin: 0.4rem 0 0.5rem 0;
