--- a/status.html
+++ b/status.html
@@ -1,159 +1,331 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>وضعیت سرور</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>داشبورد گیمینگ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
-
     body {
       margin: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background-image: url('https://wallpapercave.com/wp/wp2757874.jpg');
+      background: #000 url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif') no-repeat center
+        center fixed;
       background-size: cover;
-      background-position: center;
-      direction: rtl;
       color: white;
-      text-align: center;
-    }
-
-    .server-box {
-      background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-                  url('https://media.forgecdn.net/attachments/825/970/ctb_3.jpg') no-repeat center center;
-      background-size: cover;
-      border: 2px solid #00ffff;
-      box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
-      max-width: 400px;
-      margin: 100px auto 20px;
-      padding: 30px 20px;
-      border-radius: 20px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 60px;
       position: relative;
     }
-
-    .wifi-icon {
-      width: 60px;
-      height: 60px;
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #121212;
-      padding: 5px;
-      border-radius: 50%;
-      border: 2px solid red;
-      box-shadow: 0 0 10px red;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.4s ease;
-    }
-
-    .wifi-icon img {
-      width: 32px;
-      height: 32px;
-      transition: transform 0.4s ease;
-    }
-
-    .connecting {
-      border-color: #00ff66 !important;
-      box-shadow: 0 0 15px #00ff66 !important;
-      animation: spin 1.2s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: translateX(-50%) rotate(0deg); }
-      100% { transform: translateX(-50%) rotate(360deg); }
-    }
-
-    .connecting img {
-      transform: scale(1.5);
-    }
-
-    .server-box h2 {
-      font-size: 24px;
-      margin-top: 40px;
-      transition: color 0.3s ease;
-    }
-
-    .status-default {
+    /* دکمه پنل کاربری */
+    .user-panel-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      background-color: #88f;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 12px;
+      cursor: pointer;
+      z-index: 1000;
+      font-weight: bold;
       color: white;
+      box-shadow: 0 0 10px #88f;
+      transition: background-color 0.3s ease;
+    }
+    .user-panel-btn:hover {
+      background-color: #55f;
+    }
+    /* پنل کاربری */
+    .user-panel {
+      position: fixed;
+      top: 50px;
+      left: 10px;
+      background-color: rgba(17, 17, 17, 0.95);
+      padding: 1rem 1.5rem;
+      border-radius: 15px;
+      border: 2px solid #f0f;
+      z-index: 1000;
+      width: 280px;
+      display: none;
+      box-shadow: 0 0 15px #f0f;
+      user-select: none;
+    }
+    .user-panel h2 {
+      color: #0ff;
+      margin-top: 0;
+      margin-bottom: 1rem;
+      text-align: center;
+      text-shadow: 0 0 8px #0ff;
+    }
+    .user-panel p {
+      margin: 0.4rem 0;
+      font-size: 1rem;
+      border-bottom: 1px solid #444;
+      padding-bottom: 0.3rem;
     }
 
-    .status-connecting {
-      color: #63e68a;
-      text-shadow: 0 0 10px #63e68a;
+    .container {
+      padding: 2rem;
+      max-width: 1200px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
     }
-
-    .status-offline {
-      color: #ff4444;
+    .quick-match {
+      text-align: center;
+      margin-top: 0;
+      background: rgba(0, 100, 0, 0.1);
+      padding: 1.5rem 2rem;
+      border-radius: 15px;
+      box-shadow: 0 0 20px #0f0;
+      width: 100%;
+      max-width: 400px;
     }
-
-    .alert {
-      margin-top: 25px;
-      font-size: 16px;
-      color: #ffaaaa;
-    }
-
-    .connect-btn {
-      margin-top: 30px;
-      padding: 12px 25px;
-      font-size: 18px;
-      background-color: #2196f3;
+    .quick-match select,
+    .quick-match button {
+      display: block;
+      margin: 1rem auto;
+      padding: 0.5rem 1rem;
+      background-color: #0f0;
       border: none;
       border-radius: 10px;
-      color: white;
+      font-size: 1rem;
       cursor: pointer;
-      transition: background 0.3s;
+      font-weight: bold;
+      color: black;
+      text-shadow: none;
+      transition: background-color 0.3s ease;
+    }
+    .quick-match select:hover,
+    .quick-match button:hover {
+      background-color: #0c0;
+    }
+    .quick-match h1 {
+      color: #00ffff;
+      background: transparent;
+      background-color: #0c0;
+      text-shadow: 0 0 10px #0f0;
+      margin: 0 0 1rem 0;
+    }
+    .status-msg {
+      font-weight: bold;
+      margin-top: 1rem;
+      min-height: 24px;
+    }
+    #serverList {
+      margin-top: 1rem;
+    }
+    /* لیست سرورها */
+    .server-boxes {
+      display: flex;
+      gap: 2rem;
+      justify-content: center;
+      flex-wrap: wrap;
+      width: 100%;
+      max-width: 900px;
+    }
+    .server-item {
+      background-color: rgba(17, 17, 17, 0.9);
+      border: 3px solid #0f0;
+      border-radius: 20px;
+      padding: 1rem;
+      width: 250px;
+      text-align: center;
+      box-shadow: 0 0 15px #0f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      color: white;
+      cursor: default;
+      user-select: none;
+      position: relative;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+    .server-item:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 30px #0f0;
+    }
+    .server-item img.main-img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 0.5rem;
+      object-fit: cover;
+      height: 140px;
+      user-select: none;
+      pointer-events: none;
+    }
+        .server-item .icon {
+      width: 40px;
+      margin-top: -25px;
+      filter: drop-shadow(0 0 2px black);
+      user-select: none;
+      pointer-events: none;
     }
 
-    .connect-btn:hover {
-      background-color: #1976d2;
+    .server-item h3 {
+      margin: 0.4rem 0 0.5rem 0;
+      font-weight: bold;
+      text-shadow: 0 0 5px #0f0;
+    }
+    .server-item p {
+      color: red;
+      margin: 0 0 1rem 0;
+      font-weight: bold;
+      text-shadow: 0 0 5px black;
+    }
+    .server-item button {
+      background-color: #0f0;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 12px;
+      cursor: pointer;
+      font-weight: bold;
+      color: black;
+      transition: background-color 0.3s ease;
+    }
+    .server-item button:hover {
+      background-color: #0c0;
     }
 
-    .message-box {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #63e68a;
-      display: none;
+    /* پس‌زمینه کارت‌های سرور */
+    .server-item.bg1 {
+      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT65k6y6vkbHJ9ZrgkqaXKZlJU5W7UKygQvNw&s');
+      background-size: cover;
+      background-position: center;
+      border-color: #4caf50;
+      box-shadow: 0 0 20px #4caf50;
+      color: white;
+      text-shadow: 0 0 6px black;
+    }
+    .server-item.bg2 {
+      background-image: url('https://4kwallpapers.com/images/walls/thumbs_2t/11129.png');
+      background-size: cover;
+      background-position: center;
+      border-color: #2196f3;
+      box-shadow: 0 0 20px #2196f3;
+      color: white;
+      text-shadow: 0 0 6px black;
     }
   </style>
 </head>
 <body>
+  <button class="user-panel-btn" onclick="togglePanel()">پنل کاربری</button>
+  <div class="user-panel" id="userPanel">
+    <h2>پنل کاربری شما</h2>
+    <p><strong>رَنگ:</strong> فعال نشده!</p>
+    <p><strong>مدت بازی در سرور:</strong> 0 ساعت</p>
+    <p><strong>اشتراک:</strong> بدون اشتراک</p>
+  </div>
 
-  <div class="server-box">
-    <div class="wifi-icon" id="wifiIcon">
-      <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="قطع اتصال">
+  <div class="container">
+    <div class="quick-match">
+      <h1>Quick Match</h1>
+      <button onclick="toggleServers()">سرورها ▲</button>
+      <div id="serverList" style="display:none;">
+        <select id="serverSelect">
+          <option value="1">سرور 1</option>
+          <option value="2">سرور 2</option>
+          <option value="3">سرور 3</option>
+        </select>
+        <button onclick="connectServer()">تأیید</button>
+        <div class="status-msg" id="status"></div>
+      </div>
     </div>
 
-    <h2 id="statusTitle" class="status-default">کلیک کنید</h2>
-    <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
-
-    <button class="connect-btn" onclick="startConnection()">اتصال</button>
-    <div id="message" class="message-box">در حال بررسی وضعیت سرور...</div>
+    <div class="server-boxes">
+      <div class="server-item bg1">
+        <img
+          class="main-img"
+          src="https://i.ibb.co/0cM2fzX/wwii.png"
+          alt="WWII"
+          draggable="false"
+        />
+        <img
+          class="icon"
+          src="https://cdn-icons-png.flaticon.com/512/8925/8925522.png"
+          alt="icon"
+          draggable="false"
+        />
+        <h3>کلیک کنید</h3>
+        <p>برای اتصال به ادمین پیام بدهید</p>
+        <button onclick="alert('لطفاً به ادمین پیام دهید!')">اتصال</button>
+      </div>
+      <div class="server-item bg2">
+        <img
+          class="main-img"
+          src="https://i.ibb.co/vQf5W8B/cs2.png"
+          alt="CS2"
+          draggable="false"
+        />
+        <img
+          class="icon"
+          src="https://cdn-icons-png.flaticon.com/512/8925/8925522.png"
+          alt="icon"
+          draggable="false"
+        />
+        <h3>کلیک کنید</h3>
+        <p>برای اتصال به ادمین پیام بدهید</p>
+        <button onclick="alert('لطفاً به ادمین پیام دهید!')">اتصال</button>
+      </div>
+    </div>
   </div>
 
   <script>
-    function startConnection() {
-      const icon = document.getElementById('wifiIcon');
-      const title = document.getElementById('statusTitle');
-      const message = document.getElementById('message');
+    function togglePanel() {
+      const panel = document.getElementById('userPanel');
+      panel.style.display = panel.style.display === 'block' ? 'none' : 'block';
+    }
 
-      icon.classList.add('connecting');
-      title.textContent = 'در حال اتصال...';
-      title.className = 'status-connecting';
-      message.style.display = 'block';
-      message.textContent = 'لطفاً منتظر بمانید...';
+    function toggleServers() {
+      const list = document.getElementById('serverList');
+      list.style.display = list.style.display === 'block' ? 'none' : 'block';
+    }
 
+    function connectServer() {
+      const server = document.getElementById('serverSelect').value;
+      const status = document.getElementById('status');
+
+      if (server === '3') {
+        status.innerHTML = '<span style="color: orange">سرور در دسترس نیست</span>';
+        return;
+      }
+
+      status.innerHTML = '<span style="color: white">در حال اتصال...</span>';
       setTimeout(() => {
-        icon.classList.remove('connecting');
-        title.textContent = 'سرور آفلاین است!';
-        title.className = 'status-offline';
-        message.textContent = '⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
-      }, 3000);
+        status.innerHTML = '<span style="color: red">اتصال قطع شد</span>';
+      }, 5000);
     }
   </script>
-  
+  <!-- ...کد قبلی بالا... -->
+
+  </div> <!-- پایان container -->
+
+  <!-- بخش متن زیر صفحه -->
+  <footer style="margin-top: 3rem; text-align: center; padding: 1rem;">
+    <a
+      href="https://sites.google.com/view/server-main-/%D8%B5%D9%81%D8%AD%D9%87-%D8%A7%D8%B5%D9%84%DB%8C"
+      target="_blank"
+   <a href="#"
+  style="color:#ff2a6d; font-weight:bold; font-size:1.3rem; text-decoration:none; font-family:'Vazirmatn',sans-serif;
+      
+</a>
+
+      > (سایت 2بروید (کلیک کنید-server2- درصورت مشکل به  </a
+    >
+  </footer>
+
+<!-- ...ادامه کد ... -->
 
 </body>
 </html>
