--- a/status.html
+++ b/status.html
@@ -310,20 +310,19 @@
   <!-- ...کد قبلی بالا... -->
 
   </div> <!-- پایان container -->
+<!-- بخش متن زیر صفحه -->
+<footer style="margin-top: 3rem; text-align: center; padding: 1rem;" dir="rtl">
+  <a
+    href="https://sites.google.com/view/server-main-/%D8%B5%D9%81%D8%AD%D9%87-%D8%A7%D8%B5%D9%84%DB%8C"
+    target="_blank" rel="noopener"
+    style="color:#ff2a6d; font-weight:bold; font-size:1.2rem; text-decoration:none; font-family:'Vazirmatn',sans-serif;
+           text-shadow:0 0 3px rgba(255,42,109,.6), 0 0 6px rgba(255,42,109,.35);"
+  >
+    در صورت مشکل، به سایت دوم مراجعه کنید (سرور 2) — اینجا کلیک کنید *
+  </a>
+</footer>
 
-  <!-- بخش متن زیر صفحه -->
-  <footer style="margin-top: 3rem; text-align: center; padding: 1rem;">
-    <a
-      href="https://sites.google.com/view/server-main-/%D8%B5%D9%81%D8%AD%D9%87-%D8%A7%D8%B5%D9%84%DB%8C"
-      target="_blank"
-   <a href="#"
-  style="color:#ff2a6d; font-weight:bold; font-size:1.3rem; text-decoration:none; font-family:'Vazirmatn',sans-serif;
-      
-</a>
-
-      > (سایت 2بروید (کلیک کنید-server2- درصورت مشکل به  </a
-    >
-  </footer>
+  
 
 <!-- ...ادامه کد ... -->
 
