--- a/status.html
+++ b/status.html
@@ -261,6 +261,35 @@
         <button onclick="connectServer()">تأیید</button>
         <div class="status-msg" id="status"></div>
       </div>
+
+      <!-- دکمه Verify نئونی با افکت انفجار -->
+      <button id="verifyBtn"
+              style="margin-top:1rem; background:linear-gradient(90deg,#0ff,#0f0); color:black; font-weight:bold; padding:0.6rem 1.5rem; border:none; border-radius:12px; cursor:pointer; font-size:1.1rem; text-shadow:0 0 5px #fff; box-shadow:0 0 15px #0ff,0 0 30px #0f0; transition:all 0.3s ease;">
+        ✅ Verify
+      </button>
+
+      <style>
+        .flash-effect {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          width: 0;
+          height: 0;
+          background: radial-gradient(circle, rgba(0,255,255,0.9), rgba(0,255,0,0.6), transparent 70%);
+          border-radius: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 9999;
+          pointer-events: none;
+          animation: flashAnim 0.5s ease-out forwards;
+        }
+        @keyframes flashAnim {
+          to {
+            width: 200vw;
+            height: 200vh;
+            opacity: 0;
+          }
+        }
+      </style>
     </div>
 
     <div class="server-boxes">
@@ -307,6 +336,24 @@
         status.innerHTML = '<span style="color: red">اتصال قطع شد</span>';
       }, 5000);
     }
+
+    const verifyBtn = document.getElementById('verifyBtn');
+    verifyBtn.addEventListener('mouseover', function(){
+      this.style.boxShadow = '0 0 25px #0ff,0 0 50px #0f0';
+      this.style.transform = 'scale(1.05)';
+    });
+    verifyBtn.addEventListener('mouseout', function(){
+      this.style.boxShadow = '0 0 15px #0ff,0 0 30px #0f0';
+      this.style.transform = 'scale(1)';
+    });
+    verifyBtn.addEventListener('click', function(){
+      const flash = document.createElement('div');
+      flash.className = 'flash-effect';
+      document.body.appendChild(flash);
+      setTimeout(() => {
+        window.location.href = 'https://madsmart13.github.io/verify/';
+      }, 500);
+    });
   </script>
 </body>
 </html>
