--- a/index.html
+++ b/index.html
@@ -1,9 +1,99 @@
-<!DOCTYPE html>
-<html lang="fa">
 <head>
   <meta charset="UTF-8" />
-  <title>ثبت‌نام در سرور گیمینگ</title>
+  <title>BM1 ثبت‌نام در سرور</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- 🔹 تگ‌های سئو پایه -->
+  <meta name="description" content="ثبت‌نام در سرور گیمینگ BM1. همین حالا عضو شوید و به جامعه گیمینگ ما بپیوندید.">
+  <meta name="keywords" content="BM1, سرور گیمینگ, ثبت نام, دیسکورد, بازی آنلاین, گیمر, گیم">
+  <meta name="author" content="BM1">
+  <meta name="robots" content="index, follow">
+
+  <!-- 🔹 اوپن گراف برای شبکه‌های اجتماعی -->
+  <meta property="og:title" content="BM1 | ثبت‌نام در سرور گیمینگ">
+  <meta property="og:description" content="ثبت‌نام در سرور گیمینگ BM1. همین حالا عضو شوید و به جامعه گیمینگ ما بپیوندید.">
+  <meta property="og:url" content="https://madsmart13.github.io/BM1-ir/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://madsmart13.github.io/BM1-ir/images/preview.png">
+
+  <!-- 🔹 توییتر کارت -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BM1 | ثبت‌نام در سرور">
+  <meta name="twitter:description" content="ثبت‌نام در سرور گیمینگ BM1. همین حالا عضو شوید و به جامعه گیمینگ ما بپیوندید.">
+  <meta name="twitter:image" content="https://madsmart13.github.io/BM1-ir/images/preview.png">
+
+  <!-- 🔹 لینک کاننیکال -->
+  <link rel="canonical" href="https://madsmart13.github.io/BM1-ir/">
+
+  <!-- 🔹 آیکون سایت -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- 🔹 Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "WebSite",
+        "name": "BM1",
+        "url": "https://madsmart13.github.io/BM1-ir/",
+        "description": "ثبت‌نام در سرور گیمینگ BM1. همین حالا عضو شوید و به جامعه گیمینگ ما بپیوندید.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "BM1"
+        }
+      },
+      {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "صفحه اصلی",
+            "item": "https://madsmart13.github.io/BM1-ir/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "ثبت‌نام در سرور",
+            "item": "https://madsmart13.github.io/BM1-ir/"
+          }
+        ]
+      },
+      {
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "چگونه در سرور BM1 ثبت‌نام کنم؟",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "فقط فرم ثبت‌نام را پر کرده و دکمه ارسال را بزنید تا به جمع جامعه گیمینگ BM1 بپیوندید."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "آیا ثبت‌نام رایگان است؟",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "بله، ثبت‌نام در سرور BM1 کاملاً رایگان است."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "آیا باید دیسکورد داشته باشم؟",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "بله، داشتن دیسکورد برای ارتباط با سایر اعضا و دریافت اطلاعیه‌ها الزامی است."
+            }
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+
+  <!-- 🔹 فونت و استایل اصلی بدون تغییر -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
     body {
@@ -87,48 +177,3 @@
     }
   </style>
 </head>
-<body>
-  <div class="container">
-    <h1>ثبت‌نام در سرور گیمینگ</h1>
-    <form action="https://formsubmit.co/mate91mate@gmail.com" method="POST" target="_blank" onsubmit="handleSubmit(event)">
-      <div class="form-group">
-        <input type="text" name="firstName" placeholder="نام" required />
-      </div>
-      <div class="form-group">
-        <input type="text" name="lastName" placeholder="نام خانوادگی" required />
-      </div>
-      <div class="form-group">
-        <input type="text" name="discordId" placeholder="آیدی دیسکورد" required />
-      </div>
-      <div class="form-group">
-        <input type="tel" name="phone" placeholder="شماره موبایل (اختیاری)" />
-      </div>
-      <input type="hidden" name="_captcha" value="false" />
-      <button type="submit">ارسال</button>
-    </form>
-
-    <button id="goServersBtn" onclick="goToServers()">
-      رفتن به صفحه سرورها
-    </button>
-  </div>
-
-  <script>
-    let formSubmitted = false;
-
-    function handleSubmit(event) {
-      formSubmitted = true;
-      setTimeout(() => {
-        window.location.href = 'status.html';
-      }, 1000);
-    }
-
-    function goToServers() {
-      if (formSubmitted) {
-        window.location.href = 'status.html';
-      } else {
-        alert("لطفاً ابتدا فرم ثبت‌نام را پر کنید.");
-      }
-    }
-  </script>
-</body>
-</html>
