--- a/status.html
+++ b/status.html
@@ -250,7 +250,7 @@
     </div>
 
     <div class="quick-match">
-      <h1>Quick Match</h1>
+      <h1> auto connect </h1>
       <button onclick="toggleServers()">سرورها ▲</button>
       <div id="serverList">
         <select id="serverSelect">
