--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
+  <meta name="google-site-verification" content="st1evo7Mb8LtYAPvyKRaHL3rhbFsFeB4Y8q2fPW23WE" />
   <meta charset="UTF-8" />
   <title>BM1 ثبت‌نام در سرور</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
