--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> BM1 ثبت‌نام در سرور  </h1>
+    <h1> ثبت‌نام در سرور مهدیار </h1>
     <form action="https://formsubmit.co/mate91mate@gmail.com" method="POST" target="_blank" onsubmit="handleSubmit(event)">
       <div class="form-group">
         <input type="text" name="firstName" placeholder="نام" required />
