--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="google-site-verification" content="st1evo7Mb8LtYAPvyKRaHL3rhbFsFeB4Y8q2fPW23WE" />
   <meta charset="UTF-8" />
-  <title>BM1 ثبت‌نام در سرور</title>
+  <title> ثبت‌نام در سرور مهدیار</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- 🔹 تگ‌های سئو پایه -->
