--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="google-site-verification" content="st1evo7Mb8LtYAPvyKRaHL3rhbFsFeB4Y8q2fPW23WE" />
   <meta charset="UTF-8" />
-  <title> ثبت‌نام در سرور مهدیار</title>
+  <title> BM1-ir- ورود در سرور </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- 🔹 تگ‌های سئو پایه -->
@@ -182,7 +182,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> ثبت‌نام در سرور مهدیار </h1>
+    <h1> BM1 وررود به سایت </h1>
     <form action="https://formsubmit.co/mate91mate@gmail.com" method="POST" target="_blank" onsubmit="handleSubmit(event)">
       <div class="form-group">
         <input type="text" name="firstName" placeholder="نام" required />
@@ -197,7 +197,7 @@
         <input type="tel" name="phone" placeholder="شماره موبایل (اختیاری)" />
       </div>
       <input type="hidden" name="_captcha" value="false" />
-      <button type="submit">ارسال</button>
+      <button type="submit">تایید</button>
     </form>
 
     <button id="goServersBtn" onclick="goToServers()">
@@ -219,7 +219,7 @@
       if (formSubmitted) {
         window.location.href = 'status.html';
       } else {
-        alert("لطفاً ابتدا فرم ثبت‌نام را پر کنید.");
+        alert("لطفاً ابتدا فرم را پر کنید.");
       }
     }
   </script>
